--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">人工智能下语音识别与合成及文字识别</string>
+    <string name="app_name">基于人工智能的语音识别与合成及文字识别</string>
 </resources>
